Add author_id to controller params
