# api.yml
@@ -135,6 +135,8 @@ definitions:
         type: integer
       name:
         type: string
+      genre:
+        type: string
       description:
         type: string
       created_at:
@@ -155,6 +157,8 @@ definitions:
       description:
         type: string
       genre:
+        type: string
+      author_id:
         type: string
         
   ProjectList:
